[package]
name = "fp-consensus"
version = "2.0.0-dev"
license = "Apache-2.0"
edition = "2021"
description = "Primitives for Frontier consensus."
 
[dependencies]
ethereum = { version = "0.15.0",default-features=false, features = ["with-codec"]}
scale-codec = { package = "parity-scale-codec", version = "3.2.2", default-features = false, features = ["derive"] }
# Substrate
sp-core = { version = "7.0.0", git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.43", default-features = false }
sp-runtime = { version = "7.0.0", git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.43", default-features = false }
sp-std = { version = "5.0.0", git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.43", default-features = false }
	
[features]
default = ["std"]
std = [
	"ethereum/std",
	"scale-codec/std",
	# Substrate
	"sp-core/std",
	"sp-runtime/std",
	"sp-std/std",
]



